use removeLast() in ColorMenuListener